fixed iOs double scrollbar

--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -26,10 +26,3 @@ a {
   text-decoration: none;
   transition: 0.4s;
 }
-@media (max-width: 768px) {
-  html,
-  body {
-    /* prevent iOs horiz scroll */
-    position: relative;
-  }
-}
